# ECS175

./: README.md
Assignment2/: Assignment2.x  CMakeCache.txt  Makefile  animal.cpp  animal.hpp  cmake_install.cmake  main.cpp  point.cpp  point.hpp
Assignment2.1/: main.cpp  shader.frag
Assignment2/Assignment2.1/: CMakeLists.txt  README.txt  glutwidget.cpp  glutwidget.hpp  shader.vert  shader_utils.cpp
Assignment3/: Makefile  README.txt  vase  vase.cpp
CSIF_hw4/: Globals.h  House.3DS  Makefile~  README  VirtualWorld.1  drawWorld.cpp  drawWorld.cpp~  drawWorld.h  main.cpp  main.cpp~  medieval_store_norms.mtl  readBMP.cpp  readBMP.h  readObj.cpp  readObj.cpp~  readObj.h  shader_utils.cpp  shader_utils.cpp~  shader_utils.h  virtualWorld  virtualWorld.f.glsl  virtualWorld.v.glsl
Demo1/: CMakeLists.txt  README.txt
Demo2/: CMakeCache.txt  CMakeLists.txt  README.txt  glutwidget.cpp  main.cpp
Demo3/: CMakeLists.txt  README.txt  glutwidget.cpp  glutwidget.hpp  main.cpp
Demo4/: CMakeLists.txt  cube.cpp  cube.hpp  demo4.x  glutwidget.cpp  glutwidget.hpp  main.cpp  shader_utils.hpp
Demo4/shaders/: fragmentshader.frag  vertexshader.vert
Demo5/: CMakeCache.txt  demo5.x  glutwidget.cpp  main.cpp
Demos/Demo1/: demo1.x  glutwidget.cpp  glutwidget.hpp  main.cpp
Demos/Demo2/: Makefile  cmake_install.cmake  demo2.x  glutwidget.hpp
Demos/Demo3/: demo3.x
Demos/Demo4/: CMakeCache.txt  Makefile  README.txt  cmake_install.cmake
Demos/Demo5/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  curve.cpp  curve.hpp  glutwidget.hpp
week4/: Makefile  shader_utils.cpp  texture  texture.cpp
week7/: vase.cpp
